# template-cpp

./: .gitignore  CMakeLists.txt
script/: build.sh  common.sh  generate.sh  test.sh
test/: test.cpp
